tests/bad/case_of_zero_cases.ppl
data foo = Bar;
case Bar of 
